[package]
name = "batteryudpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.2"
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
serde = "1.0.136"
serde_derive = "1.0.136"
csv = "1.1.6"